<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.datify.counter.myapplication.TimerActivity">

    <TextView
        android:text="@string/title_activity_timer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="42sp"
        android:textColor="#990033"
        android:id="@+id/textView" />

    <TextView
    android:id="@+id/timerValue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:textSize="40sp"
    android:textColor="#222222"
    android:text="@string/timerVal"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
    android:id="@+id/startButton"
    android:layout_width="90dp"
    android:layout_height="45dp"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:layout_marginLeft="38dp"
    android:text="@string/startButtonLabel" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/startButton"
        android:layout_marginLeft="135dp"
        android:text="@string/pauseButtonLabel" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/startButton"
        android:layout_alignBottom="@+id/startButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp"
        android:text="@string/saveButtonLabel" />


</RelativeLayout>
